# Hyper8080

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  create_new_test.py
scripts/: create_new_test.py  static-analysis.sh
src/: .clang-format  Main.cpp  cpu.c  cpu.h  debug.c  debug.h  defines.h  defs.h  instructions.c  instructions.h  main.c  main.cpp  render.c  render.h  sys.c  sys.h
src/Core/: Rendering.hpp  Types.hpp
src/Emulation/: CPU.cpp  CPU.hpp  Instructions.hpp
src/GUI/: Backend.cpp  Backend.hpp  Window.cpp  Window.hpp
src/Legacy/: MainC.cpp  cpu.cpp  cpu.h  debug.cpp  debug.h  sys.cpp  sys.h
src/Rendering/: Common.hpp
src/emulation/: CPU.cpp  CPU.h  instructions.h
src/gui/: Backend.cpp  Backend.h  Window.cpp  Window.h
tests/: test_aci.c  test_adc.c  test_adi.c  test_ani.c  test_base.c  test_cmc.c  test_cpu_basic_memory.c  test_daa.c  test_dad.c  test_dcr.c  test_dcx.c  test_flags.c  test_inr.c  test_instructions.c  test_inx.c  test_ldax.c  test_lxi.c  test_mvi.c  test_ori.c  test_ral.c  test_rar.c  test_rlc.c  test_rrc.c  test_sbi.c  test_sta.c  test_stack.c  test_stack_overflowing.c  test_stax.c  test_stc.c  test_sui.c
